Tried to add the Knight Solver

--- a/ChessPuzzles/BoardView.html
+++ b/ChessPuzzles/BoardView.html
@@ -4,6 +4,7 @@
     <title></title>
     <script src="Scripts/angular.js"></script>
     <script src="app/Board.js"></script>
+    <script src="app/KnightSolver.js"></script>
     <script src="app/BoardController.js"></script>
     <link href="app/BoardView.css" rel="stylesheet" />
 </head>
